// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Build distribution should have a predictable ephemeral navigation based on route configuration: GUI routes expected covered, missing routes 1`] = `
[
  {
    "coverage": "TRUE",
    "path": "/openshift",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/OpenShift Container Platform",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/openshift-container",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/container",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/platform",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/shift",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/openshift-dedicated",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/dedicated",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/OpenShift-metrics",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/metrics",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/rhacs",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/advanced",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/cluster",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/security",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/kubernetes",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/acs",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/rhel",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/insights",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/enterprise",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/linux",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/el",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/x86",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/ibm",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/power",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/sat",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/server",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/capsule",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "TRUE",
    "path": "/rhods",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/application-services",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/data",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/science",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/ods",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/rosa",
    "productGroup": [
      "rosa",
    ],
    "productId": [
      "rosa",
    ],
    "productVariants": [],
  },
]
`;

exports[`Build distribution should have a predictable ephemeral navigation based on route configuration: YAML routes expected covered, missing routes 1`] = `
[
  {
    "coverage": "TRUE",
    "path": "/rhel",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "TRUE",
    "path": "/openshift",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/rhods",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/rhacs",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/rhel",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "TRUE",
    "path": "/openshift-container",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
]
`;

exports[`Build distribution should match a specific file output 1`] = `
[
  "",
  "./dist/css/2302*css",
  "./dist/css/2582*css",
  "./dist/css/5724*css",
  "./dist/css/6235*css",
  "./dist/css/6587*css",
  "./dist/css/7109*css",
  "./dist/css/9506*css",
  "./dist/fed-mods.json",
  "./dist/fonts/graph2x.png",
  "./dist/fonts/graph4x.png",
  "./dist/js/1233*js",
  "./dist/js/1302*js",
  "./dist/js/1339*js",
  "./dist/js/1355*js",
  "./dist/js/136*js",
  "./dist/js/1663*js",
  "./dist/js/1799*js",
  "./dist/js/1824*js",
  "./dist/js/1858*js",
  "./dist/js/2227*js",
  "./dist/js/2243*js",
  "./dist/js/2258*js",
  "./dist/js/2302*js",
  "./dist/js/2481*js",
  "./dist/js/2582*js",
  "./dist/js/2622*js",
  "./dist/js/2624*js",
  "./dist/js/2738*js",
  "./dist/js/2881*js",
  "./dist/js/31*js",
  "./dist/js/3128*js",
  "./dist/js/3267*js",
  "./dist/js/3280*js",
  "./dist/js/3441*js",
  "./dist/js/3597*js",
  "./dist/js/3935*js",
  "./dist/js/3935*txt",
  "./dist/js/3961*js",
  "./dist/js/3985*js",
  "./dist/js/3985*txt",
  "./dist/js/4024*js",
  "./dist/js/4097*js",
  "./dist/js/4143*js",
  "./dist/js/4155*js",
  "./dist/js/4205*js",
  "./dist/js/4224*js",
  "./dist/js/4418*js",
  "./dist/js/457*js",
  "./dist/js/4683*js",
  "./dist/js/5020*js",
  "./dist/js/5068*js",
  "./dist/js/5394*js",
  "./dist/js/5724*js",
  "./dist/js/5876*js",
  "./dist/js/5993*js",
  "./dist/js/608*js",
  "./dist/js/6170*js",
  "./dist/js/6170*txt",
  "./dist/js/6235*js",
  "./dist/js/6353*js",
  "./dist/js/6491*js",
  "./dist/js/655*js",
  "./dist/js/6587*js",
  "./dist/js/6696*js",
  "./dist/js/6816*js",
  "./dist/js/7098*js",
  "./dist/js/7109*js",
  "./dist/js/7109*txt",
  "./dist/js/7216*js",
  "./dist/js/7235*js",
  "./dist/js/7294*js",
  "./dist/js/7294*txt",
  "./dist/js/7585*js",
  "./dist/js/7745*js",
  "./dist/js/7785*js",
  "./dist/js/7785*txt",
  "./dist/js/7891*js",
  "./dist/js/8710*js",
  "./dist/js/8900*js",
  "./dist/js/9051*js",
  "./dist/js/9077*js",
  "./dist/js/931*js",
  "./dist/js/939*js",
  "./dist/js/9407*js",
  "./dist/js/9517*js",
  "./dist/js/9669*js",
  "./dist/js/9669*txt",
  "./dist/js/9818*js",
  "./dist/js/9818*txt",
  "./dist/js/9928*js",
  "./dist/js/App*js",
  "./dist/js/exposed-./RootApp*js",
  "./dist/locales/en-US.json",
  "./dist/locales/en.json",
  "./dist/locales/locales.json",
  "./dist/sourcemaps/1233*map",
  "./dist/sourcemaps/1302*map",
  "./dist/sourcemaps/1339*map",
  "./dist/sourcemaps/1355*map",
  "./dist/sourcemaps/136*map",
  "./dist/sourcemaps/1663*map",
  "./dist/sourcemaps/1799*map",
  "./dist/sourcemaps/1824*map",
  "./dist/sourcemaps/1858*map",
  "./dist/sourcemaps/2227*map",
  "./dist/sourcemaps/2243*map",
  "./dist/sourcemaps/2258*map",
  "./dist/sourcemaps/2302*map",
  "./dist/sourcemaps/2481*map",
  "./dist/sourcemaps/2582*map",
  "./dist/sourcemaps/2622*map",
  "./dist/sourcemaps/2624*map",
  "./dist/sourcemaps/2738*map",
  "./dist/sourcemaps/2881*map",
  "./dist/sourcemaps/31*map",
  "./dist/sourcemaps/3128*map",
  "./dist/sourcemaps/3267*map",
  "./dist/sourcemaps/3280*map",
  "./dist/sourcemaps/3441*map",
  "./dist/sourcemaps/3597*map",
  "./dist/sourcemaps/3935*map",
  "./dist/sourcemaps/3961*map",
  "./dist/sourcemaps/3985*map",
  "./dist/sourcemaps/4024*map",
  "./dist/sourcemaps/4097*map",
  "./dist/sourcemaps/4143*map",
  "./dist/sourcemaps/4155*map",
  "./dist/sourcemaps/4418*map",
  "./dist/sourcemaps/457*map",
  "./dist/sourcemaps/4683*map",
  "./dist/sourcemaps/5020*map",
  "./dist/sourcemaps/5068*map",
  "./dist/sourcemaps/5394*map",
  "./dist/sourcemaps/5724*map",
  "./dist/sourcemaps/5876*map",
  "./dist/sourcemaps/5993*map",
  "./dist/sourcemaps/608*map",
  "./dist/sourcemaps/6170*map",
  "./dist/sourcemaps/6235*map",
  "./dist/sourcemaps/6353*map",
  "./dist/sourcemaps/6491*map",
  "./dist/sourcemaps/655*map",
  "./dist/sourcemaps/6587*map",
  "./dist/sourcemaps/6696*map",
  "./dist/sourcemaps/6816*map",
  "./dist/sourcemaps/7098*map",
  "./dist/sourcemaps/7109*map",
  "./dist/sourcemaps/7216*map",
  "./dist/sourcemaps/7235*map",
  "./dist/sourcemaps/7294*map",
  "./dist/sourcemaps/7585*map",
  "./dist/sourcemaps/7785*map",
  "./dist/sourcemaps/7891*map",
  "./dist/sourcemaps/8710*map",
  "./dist/sourcemaps/8900*map",
  "./dist/sourcemaps/9051*map",
  "./dist/sourcemaps/9077*map",
  "./dist/sourcemaps/931*map",
  "./dist/sourcemaps/939*map",
  "./dist/sourcemaps/9407*map",
  "./dist/sourcemaps/9517*map",
  "./dist/sourcemaps/9669*map",
  "./dist/sourcemaps/9818*map",
  "./dist/sourcemaps/9928*map",
  "./dist/sourcemaps/App*map",
  "./dist/sourcemaps/exposed-./RootApp*map",
  "./dist/subscriptions*js",
]
`;
